Change intro paragraph & styling on education

--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
     <p class="section-text">
       My name is Aviraj Mukherjee and I am currently a 3rd year Computer
       Engineering Major at the University of California, Irvine. Through my experience
-      withcoursework and extracirricular projects, I have developed a strong interest
+      with coursework and extracirricular projects, I have developed a strong interest
       in software engineering/development and data
       analytics. I have great interpersonal communication skills, so I enjoy
-      working in a team environment. In addition, I have the ability to work
+      working in a team environment. Additionally, I have the ability to work
       as an individual both effectively and efficiently. As a person eager to
       learn and step outside my comfort zone, I am actively seeking new
       opportunities to grow and challenge myself as a student, engineer, and
@@ -149,7 +149,7 @@
           <h1 class="section-subtitle">EDUCATION</h1>
           <div class="row justify-content-center">
             <p class="education">
-              University of California, Irvine - B.S. Computer Engineering
+              University of California, Irvine - <b>B.S. Computer Engineering </b>
             </p>
             </br>
             <p class="education">Successfully completed coursework in: </p>
