--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <div class="card-body">
           <h5 class="card-title">Snake</h5>
           <p class="card-text">
-            The classic game of snake written in Python using Pygame
+            The classic game of snake written in Python using Pygame.
           </p>
           <a href="https://github.com/Aviraj55/snakeGame" class="stretched-link" target="_blank"></a>
         </div>
