Fix Movie Lab card

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <div class="card-body">
           <h5 class="card-title">Movie Lab</h5>
           <p class="card-text">
-            Command line program written in C to do basic visual manipulation
+            Command line program written in C to do basic Digital Image Processing
             on photos/videos. Does basic edits such as applying filters,
             cropping, reversing a video, etc.
           </p>
